--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bruno.umbelino.github.io/Calculator/",
+  "homepage": "https://brunoumbelino.github.io/Calculator-v2/",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
@@ -9,12 +9,14 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.8.1",
+    "save-dev": "0.0.1-security",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -43,7 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
-  }
+  "devDependencies": {}
 }
